# 42sh

./: +#+  -  .fc  .swo  .swp  1  113  123  13  21sh  42cmd  42sh  444  CMakeLists.txt  Makefile  README.md  a.out  abc  author  buf_que.txt  ch_que.txt  end_buff.txt  err  exit3.c  heh.sh  kek  main.c  maincc.c  nano.save  out  popa  que.txt  sas  script.sh  start_que.txt  test  test.txt  test2
42sh.dSYM/Contents/: Info.plist
hash_table/: CMakeLists.txt  a.out  ft.c  hash_table.c  hash_table_2.c  main.c  main.h
history/: hist.txt
inc/: calc.h  exec.h  fshell.h  hash.h  history.h  lexer.h  nucleus.h  parser.h  struct.h
libft/: Makefile  author  ch_que.txt  ft_atoi.c  ft_bzero.c  ft_count.c  ft_count_whtsp_end.c  ft_count_whtsp_start.c  ft_count_words.c  ft_exponentiation.c  ft_free_str.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdelim.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isupper.c  ft_itoa.c  ft_itoa_base.c  ft_labs.c  ft_list_clear.c  ft_list_foreach.c  ft_list_reverse.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_nbrlen.c  (+54 more)
libft/inc/: get_next_line.h  libft.h
libft/objs/: count_words.d  ft_atoi.d  ft_bzero.d  ft_count.d  ft_free_str.d  ft_isalnum.d  ft_isalpha.d  ft_isascii.d  ft_isdigit.d  ft_isprint.d  ft_itoa.d  ft_itoa_base.d  ft_list_clear.d  ft_list_foreach.d  ft_list_reverse.d  ft_lstadd.d  ft_lstdel.d  ft_lstdelone.d  ft_lstiter.d  ft_lstmap.d  ft_lstnew.d  ft_memalloc.d  ft_memccpy.d  ft_memchr.d  ft_memcmp.d  ft_memcpy.d  ft_memdel.d  ft_memmove.d  ft_memset.d  ft_nbrlen.d  ft_printf.d  ft_putchar.d  ft_putchar_fd.d  ft_putendl.d  ft_putendl_fd.d  ft_putnbr.d  ft_putnbr_fd.d  ft_putstr.d  ft_putstr_fd.d  ft_realloc.d  (+39 more)
libft/src/: count_words.c  ft_atoi.c  ft_bzero.c  ft_count.c  ft_count_whtsp_end.c  ft_count_whtsp_start.c  ft_count_words.c  ft_exponentiation.c  ft_free_str.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdelim.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isupper.c  ft_itoa.c  ft_itoa_base.c  ft_labs.c  ft_list_clear.c  ft_list_foreach.c  ft_list_reverse.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_nbrlen.c  ft_printf.c  ft_putchar.c  (+51 more)
nucleus/: ft_back_slovo.c  ft_cleanstr.c  ft_do_copy.c  ft_do_delch.c  ft_do_leftright.c  ft_downcursor.c  ft_next_slovo.c  ft_realloc_tab.c  ft_upcursor.c  show_history.c
objs/: check_file.d  ck_check.d  do_builtin.d  do_quest.d  ft_distruct.d  ft_error_q.d  ft_main_what.d  ft_malloc.d  ft_open_flag_in_builtins.d  ft_signal.d  ft_take_arg.d  ft_whatis.d  g_builtins.d  init_shell.d  main.d  main_2.d  put_error_to_env.d  redirects.d  shell_lvl.d
objs/builtins/: 42sh_builtin.d  authors.d  bg_builtin.d  exit_builtin.d  fg_builtin.d  ft_cd.d  ft_cd_2.d  ft_cd_3.d  ft_echo.d  ft_echo2.d  ft_fc.d  ft_fc_2.d  ft_fc_3.d  ft_type.d  history_builtin.d
objs/calc/: calc.d  calc_add_fun.d  calc_arr_reloc.d  calc_arr_tkns.d  calc_atoi.d  calc_com_fun.d  calc_eq_fun.d  calc_error_fun.d  calc_inc_fun.d  calc_lexer.d  calc_log_fun.d  calc_ltoa.d  calc_mul_fun.d  calc_num_fun.d  calc_parent_fun.d  calc_tkn.d  calc_var_fun.d  calc_var_tkn.d  change_vars.d  ft_do_zam_eval.d
objs/errors/: errror_handler.d
objs/evaln/: atoimy.d  calc.d  calc_def_token.d  calc_error.d  calc_lexer.d  calc_utility.d  change_vars.d  check_calc.d  check_calc_tokens.d  define_calc_tokens.d  dop.d  dostack.d  ft_do_zam_eval.d  ft_eval_parser.d  inftopost.d  sub_and_add.d  zam_var.d
objs/exec/: continuing_jobs.d  continuing_stopped_jobs.d  create_jobs_and_proc.d  find_jobs.d  free_job_list.d  ft_create_file.d  ft_do_open_flags.d  ft_do_pipe.d  ft_do_pipe_next.d  ft_do_redirects.d  ft_fun_fork.d  ft_redirect_error.d  job_info.d  launch_job.d  launch_process.d  operating_job.d  put_job_in_background.d  put_job_in_foreground.d  redirect.d  stopped_and_terminated_jobs.d  working_with_fds.d
objs/hash/: hash_error.d  hash_table.d  hash_table_2.d  print_hash.d
objs/history/: change_hist_exp.d  del_hist.d  dop_memory.d  find_history.d  ft_add_to_history.d  ft_putmemory.d  history_search.d  init_history.d  open_hist_file.d  save_hist.d  show_history.d
objs/lexer/: all_bax_and_hist_change.d  change_dol.d  change_hist_exp.d  change_sc.d  change_slashes.d  change_spaces.d  change_str_by_str.d  check_errors.d  cr_and_add_tokens.d  create_new_lexer_struct.d  del_one_node_in_lextokens.d  del_one_token.d  do_subshell.d  do_zam_ravno.d  do_zamena_slash.d  dop_funs.d  get_opt_type.d  history_search.d  join_par.d  kill_dop_structure.d  lexer.d  word_sizes.d  zam_hidden_set.d  zam_opt_in_tokens.d
objs/nucleus/: del_readline.d  do_add.d  dop_memory.d  dop_tab_funs.d  find_history.d  ft_add_intput_que.d  ft_add_sumchar.d  ft_arrdel.d  ft_arrnew.d  ft_arrows.d  ft_back_slovo.d  ft_c.d  ft_cheak_quote.d  ft_cheak_tab.d  ft_cleanstr.d  ft_cut.d  ft_cut_copy.d  ft_cutcopy.d  ft_directory.d  ft_do_copy.d  ft_do_delch.d  ft_do_leftright.d  ft_dop_history.d  ft_downcursor.d  ft_find_env.d  ft_head_memory.d  ft_memory.d  ft_next_slovo.d  ft_print_tab.d  ft_printf_helper.d  ft_put_n.d  ft_putcut.d  ft_putmemory.d  ft_read_8.d  ft_realloc_buff.d  ft_realloc_tab.d  ft_setcursor.d  ft_start_read.d  ft_strsplit1.d  ft_upcursor.d  (+7 more)
objs/parser/: all_parse.d  change_tilda.d  check_bracket.d  create_dop_struct.d  dop_parser.d  inhibitor_args.d  is_system_symbol.d  main_parser.d
objs/qft_printf/: add_buff.d  add_char.d  add_d.d  add_str.d  ft_add_c_s_d.d  ft_add_double.d  ft_dtoa.d  ft_itoa_base_c.d  (+8 more)
src/: brackets.c  check_file.c  ck_check.c  do_builtin.c  do_quest.c  ft_create.c  ft_distruct.c  ft_error_q.c  ft_main_what.c  ft_malloc.c  ft_open_flag_in_builtins.c  ft_reverse_zamena.c  ft_signal.c  ft_take_arg.c  ft_whatis.c  g_builtins.c  global.c  init_shell.c  main.c  main_2.c  put_error_to_env.c  redirects.c  shell_lvl.c
tests/: if.sh  while.sh
(+261 files in other folders)
